Restrict SulfurCube interactions to buildtrust, update to MC 26.2 (#2634)